--- a/style.scss
+++ b/style.scss
@@ -170,6 +170,12 @@ h3 {
                     display: flex;
                     gap: 3px;
                     justify-content: flex-end;
+                    align-items: center;
+                    span {
+                        @include phone {
+                            display: none;
+                        }
+                    }
                     input,
                     button {
                         border-radius: 5px;
@@ -183,20 +189,74 @@ h3 {
                     font-size: 25px;
                     color: teal;
                     cursor: pointer;
+                    @include phone {
+                        position: absolute;
+                        inset: auto 2rem 26.5rem;
+                    }
                 }
                 .navMenu {
+                    display: none;
                     background: #fbeaad;
-                    padding: 15px;
+                    padding: 20px 15px;
                     position: absolute;
                     right: 7rem;
                     top: 17rem;
                     width: 40rem;
                     border-radius: 5px;
-                    transition: all 2s ease-out;
                     box-shadow: 0 0 5px #aaaaaa;
+                    cursor: move;
+                    z-index: 10;
+                    @include phone {
+                        position: absolute;
+                        width: 92%;
+                        margin: auto;
+                        inset: auto;
+                    }
+                    .setting__more {
+                        display: grid;
+                        font-size: 20px;
+                        margin-bottom: 20px;
+                        cursor: pointer;
+                        grid-template-columns: 50% 50%;
+                        @include phone {
+                            grid-template-columns: 60% 40%;
+                        }
+                        span {
+                            color: #34b43e;
+                            font-weight: 500;
+                        }
+                        i {
+                            color: cornflowerblue;
+                            text-align: end;
+                        }
+                        i:hover {
+                            color: #34b43e;
+                        }
+                        .extend--feature {
+                            background: white;
+                            font-size: 14px;
+                            position: absolute;
+                            top: 5rem;
+                            right: 2rem;
+                            width: 28rem;
+                            z-index: 99;
+                            display: none;
+                            padding: 10px 0;
+                            .feature--item {
+                                display: flex;
+                                gap: 1rem;
+                                align-items: center;
+                                padding: 10px 15px;
+                            }
+                            .feature--item:hover {
+                                background: rgb(255, 233, 233);
+                            }
+                        }
+                    }
                     .setup__data {
                         display: grid;
                         grid-template-columns: 40% 60%;
+                        margin-bottom: 25px;
                         .download {
                             width: 12rem;
                             background: #46b14f;
@@ -223,6 +283,23 @@ h3 {
                                 border: 1px solid #cccccc;
                                 border-radius: 5px;
                                 transition: background-color 0.3s ease-in-out;
+                                @include phone {
+                                    font-size: 11px;
+                                    letter-spacing: 0.25px;
+                                }
+                            }
+                            .option {
+                                display: none;
+                                background: white;
+                                padding: 0;
+                                p {
+                                    padding: 5px 10px;
+                                }
+                                p:hover {
+                                    background: rgb(39, 151, 39);
+                                    color: white;
+                                    cursor: pointer;
+                                }
                             }
                         }
                     }
@@ -230,11 +307,15 @@ h3 {
                         .alert__add {
                             display: grid;
                             grid-template-columns: 70% 30%;
+                            margin: 10px 0px;
+                            span {
+                                font-weight: 500;
+                            }
                             .switch {
                                 position: relative;
                                 display: inline-block;
-                                width: 60px;
-                                height: 30px;
+                                width: 50px;
+                                height: 22px;
                                 input {
                                     opacity: 0;
                                     width: 0;
@@ -253,16 +334,16 @@ h3 {
                                 .slider:before {
                                     position: absolute;
                                     content: "";
-                                    height: 22px;
-                                    width: 22px;
-                                    left: 4px;
-                                    bottom: 4px;
+                                    height: 19px;
+                                    width: 19px;
+                                    left: 3px;
+                                    bottom: 2px;
                                     background-color: white;
                                     -webkit-transition: .4s;
                                     transition: .4s;
                                 }
                                 input:checked+.slider {
-                                    background-color: #2196F3;
+                                    background-color: #08c045;
                                 }
                                 input:checked+.slider:before {
                                     -webkit-transform: translateX(26px);
@@ -284,6 +365,13 @@ h3 {
                             @extend .alert__add;
                         }
                     }
+                }
+                .unselectable {
+                    -moz-user-select: none;
+                    -khtml-user-select: none;
+                    -webkit-user-select: none;
+                    -ms-user-select: none;
+                    user-select: none;
                 }
             }
         }
