--- a/style.scss
+++ b/style.scss
@@ -195,7 +195,7 @@ h3 {
                     }
                 }
                 .navMenu {
-                    display: none;
+                    // display: none;
                     background: #fbeaad;
                     padding: 20px 15px;
                     position: absolute;
